Cards turn blue when clicked on mobile bug test fix

--- a/src/scss/game/cards.scss
+++ b/src/scss/game/cards.scss
@@ -20,7 +20,7 @@
   position: absolute;
   border-style: solid;
   border-width: multiplyCardWidth(0.015);
-  cursor: pointer;
+  //cursor: pointer;
 }
 
 .game__cards-container__card--ocean {
